--- a/netflixstyle.css
+++ b/netflixstyle.css
@@ -7,7 +7,7 @@ body {
 }
 
 .banner {
-  background-image: url(./netflix-banner.jpg);
+  background-image: url("./assets/netflix-banner.jpeg");
 
   background-repeat: no-repeat;
   max-height: 100vh;
