--- a/netflixstyle.css
+++ b/netflixstyle.css
@@ -408,7 +408,7 @@ footer p {
   }
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (min-width: 374px) and (max-width: 426px) {
   .first-page h1 {
     font-size: 30px;
   }
